--- a/css/style.css
+++ b/css/style.css
@@ -578,29 +578,195 @@ input,textarea {
 }
 
 /* Toggler */
- .nav__toggler {
+.nav__toggler {
   cursor: pointer;
- }
+}
 
- .bar {
+.bar {
   width: 25px;
   height: 3px;
   background-color: #000;
   margin: 5px 0;
   border-radius: 5px;
   transition: all 0.3s ease-out;
- }
+}
 
- .nav.nav__expanded .bar-one {
+.nav.nav__expanded .bar-one {
   transform: rotate(-45deg) translate(-9px, 6px);
   margin: 0.8rem 0;
- }
- .nav.nav__expanded .bar-two {
+}
+.nav.nav__expanded .bar-two {
   opacity: 0;
   transform: translateX(-20px);
- }
- .nav.nav__expanded .bar-three {
+}
+.nav.nav__expanded .bar-three {
   transform: rotate(45deg) translate(-8px, -8px);
   margin: 0.8rem 0;
- }
+}
+
+ /* Hero section */
+
+.hero-section {
+  width: 100%;
+  height: 47.8rem;
+}
+
+.hero-section img {
+  width: 100%;
+  height: auto;
+}
+.hero-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 47.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.intro-btn {
+  border-radius: 20px;
+  background-image: linear-gradient(51deg,rgba(23,26,60,.7) 5%,rgba(23,26,60,.3) 95%);
+  padding: 1.6rem;
+  border-radius: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  width: 27rem;
+}
+
+.intro-btn h1 {
+  font-size: 2.5rem;
+  color: var(--color-white);
+}
+.intro-btn h2 {
+  font-size: 1.6rem;
+  color: var(--color-white);
+  margin-bottom: 3rem;
+}
+
+.intro-btn__passenger {
+  background-color: var(--color-white);
+  border-radius: 1.2rem;
+  margin-bottom: 2rem;
+  padding: 1.4rem;
+  text-align: center;
+  width: 22rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.intro-btn__passenger .icon {
+  font-size: 1.8rem;
+}
+.intro-btn__passenger p {
+  font-size: 1.4rem;
+  margin: auto;
+}
+
+.intro-btn__dirver {
+  background-color: transparent;
+  color: var(--color-white);
+  border: 2px solid var(--color-white);
+}
+
+.intro-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+} 
+
+@media screen and (min-width:768px) {
+  .hero-wrapper {
+    justify-content: flex-start;
+  }
+  .intro-btn {
+    width: 53rem;
+    padding: 2.5rem;
+    border-radius: 2rem;
+  }
+  .intro-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .intro-btn h1 {
+    font-size: 5rem;
+  }
+  .intro-btn h2 {
+    font-size: 2.4rem;
+  }
+  .intro-btn__passenger p {
+    font-size: 1.6rem;
+  }
+}
+
+/* Services section */
+
+.services__tabs {
+  display: flex;
+  justify-content: space-between;
+  overflow: auto;
+  padding: 5px 0 15px;
+}
+.services__tabs .tab {
+  display: block;
+  text-decoration: none;
+  color: #444;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100px;
+}
+.services__tabs .tab > p {
+  margin-top: 1.5rem;
+  font-size: 1.2rem;
+}
+.services__tabs img {
+  max-width: 85px;
+}
+
+.services__tabs .tab {
+  opacity: 0.5;
+  transition: all 0.2s ease-out;
+}
+.services__tabs .tab:hover {
+  opacity: 1;
+}
+.services__title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
+.services .feature__title {
+   margin-bottom: 1.5rem 0;
+}
+.services .feature__image {
+  display: none;
+}
+@media screen and (min-width:1024px) {
+  .services__tabs .tab > p {
+    margin-top: 1rem;
+    font-size: 1.4rem;
+  }
+  .services__tabs img {
+    width: 100%;
+  }
+  .services__title {
+    font-size: 3.5rem;
+    margin-bottom: 3rem;
+  }
+  .services .feature__image {
+    display: block;
+  }
+}
+
+
+.tab-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
