complate travelling section

--- a/components/Navbar.html
+++ b/components/Navbar.html
@@ -13,7 +13,7 @@
         <li class="nav__item"><a href="#">خدمات کسب و کارها</a></li>
         <li class="nav__item"><a href="#">فرصت های شغلی</a></li>
         <li class="nav__item"><a href="#">وبلاگ</a></li>
-        <li class="nav__item cta"><a href="#" class="btn btn--primary">دانلود تپسی</a></li>
+        <li class="nav__item cta"><a href="#" class="btn btn--primary btn--block">دانلود تپسی</a></li>
       </ul>
     </nav>
   </header>
