--- a/css/fonts.css
+++ b/css/fonts.css
@@ -12,6 +12,35 @@
   src: url("/assets/fonts/Vazir-Bold.woff") format("woff");
 }
 
-body,button,input,textarea {
+body,
+button {
   font-family: "vazir";
+}
+* {
+  -webkit-user-select: none;
+}
+
+/*  PREVENT TEXT SIZE SCALLING */
+
+/* iPhone, portrait & landscape. */
+@media all and (max-device-width: 480px) {
+  html,
+  body,
+  p {
+    text-size-adjust: none !important;
+    -webkit-text-size-adjust: none !important;
+    -moz-text-size-adjust: none !important;
+    -ms-text-size-adjust: none !important;
+  }
+}
+/* iPad, portrait & landscape. */
+@media all and (min-device-width: 768px) and (max-device-width: 1024px) {
+  html,
+  body,
+  p {
+    text-size-adjust: none !important;
+    -webkit-text-size-adjust: none !important;
+    -moz-text-size-adjust: none !important;
+    -ms-text-size-adjust: none !important;
+  }
 }
