--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 body {
   color: var(--color-body);
@@ -520,6 +521,10 @@ textarea {
 
 .main-header {
   background-color: var(--color-navbar);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 11;
 }
 .nav {
   display: flex;
